Changelog
=========

2.7-dev (unreleased)
--------------------
 * map soer topic menu to partc topics and hide any sections that do not have results. #3838 [vincisas]
 * browse geographically menu as fancybox popup. #3796 [vincisas]
 * fixed topic search for soer frontpage, made sure the required keywords were queried with AND and then filtered on the 'optionals' #3852 [vincisas]

2.6 - (2010-11-11)
------------------
 * text of key messages and key facts cut after x words #3833 [vincisas]
 * More link added to key facts and key messages. We had to shorten number of characters to max 380 to fit the 'more' link. fixes #3834 [vincisas]
 * First occurence of selected key word is marked bold. fixes #3835 [vincisas]
 * Top portlets on soer frontpage have lower height now, fixes #3836 [vincisas]

2.5 - (2010-11-10)
------------------
 * titles changed for key facts and messages on soer frontpage #3830 [vincisas]

2.4 - (2010-11-05)
------------------
r18506 thuliper	The 'country environment' section now lists part-C content tagged with
r18500 thuliper Removed path from catalog query so the query should be bullet proof now :)
r18499 thuliper Only require SOER2010 plus ONE of the passed in keywords. Refs #3797
r18498 thuliper Display all countries in alphabetical order. Fixes #3800
r18497 thuliper More padding on search box titles/labels. Refs #3798
r18496 thuliper Avoid long item in drop down. Refs #3798
r18495 thuliper Fixed size on #visual-portal-wrapper and video box. Refs #3798
r18494 thuliper Also support 'soer-draft' as the name of the soer frontpage folder, refs

2.3 - (2010-10-25)
----------------------
 * SOER 2010 frontpage milestone 1 [thuliper]
 * Bug fix: fixed 404s on loading images in eea template on devels [ghicaale #3697]

2.2 - (2010-10-19)
------------------
 * Bug fix: fixed bug where pop up panels would dissapear. [thuliper #3216]
 * Bug fix: fixed print stylesheeet for Firefox [tiberich #3369]

2.1 - (2010-09-29)
------------------